--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -325,6 +325,7 @@ if(OpenSSL_ENABLE)
     if(OPENSSL_FOUND)
         include_directories(${OPENSSL_INCLUDE_DIR})
         set(LIBS ${LIBS} ${OPENSSL_LIBRARIES})
+        set(OPENSSL_USE_STATIC_LIBS TRUE)
     else()
         message(FATAL_ERROR "OpenSSL NOT found: use `-DOpenSSL_ENABLE=OFF` to build without SSL support")
     endif()
