openssl 지원 사용 안 함

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,7 +18,7 @@ build_script:
   - mkdir build
   - cd build
   - set CMAKE_PREFIX_PATH=C:\xmr-stak-dep\hwloc;C:\xmr-stak-dep\libmicrohttpd;C:\xmr-stak-dep\openssl;
-  - cmake -G "Visual Studio 14 2015 Win64" -T v140,host=x64 .. -DXMR-STAK_COMPILE=generic -DCMAKE_BUILD_TYPE=Release -DMICROHTTPD_ENABLE=OFF -DXMR-STAK_COMPILE=generic -DOpenCL_ENABLE=OFF -DCUDA_ENABLE=OFF -DCMAKE_LINK_STATIC=ON -DOPENSSL_USE_STATIC_LIBS=TRUE
+  - cmake -G "Visual Studio 14 2015 Win64" -T v140,host=x64 .. -DXMR-STAK_COMPILE=generic -DCMAKE_BUILD_TYPE=Release -DMICROHTTPD_ENABLE=OFF -DXMR-STAK_COMPILE=generic -DOpenCL_ENABLE=OFF -DCUDA_ENABLE=OFF -DCMAKE_LINK_STATIC=ON -DOpenSSL_ENABLE=OFF
   - cmake --build . --config Release --target install
 
 test_script:
