--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -448,8 +448,8 @@ endif()
 
 # activate static MSVCRT linking
 if(CMAKE_LINK_STATIC)
-    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD /MT /NODEFAULTLIB:MSVCRT")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MD /MT /NODEFAULTLIB:MSVCRT")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD/NODEFAULTLIB:msvcrt.lib")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MD /NODEFAULTLIB:msvcrt.lib")
 endif()
 
 # compile C files
