정적 연결 MSVCRT 구현

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -448,9 +448,9 @@ endif()
 
 # activate static MSVCRT linking
 if(CMAKE_LINK_STATIC)
-    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MT")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /MT")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} LIBCMT.lib")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} LIBCMT.lib")
+    #set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} LIBCMT.lib")
 endif()
 
 # compile C files
